syntax = "proto3";

option go_package = "github.com/jlewi/cloud-assistant/protos/gen/cassie";

import "google/protobuf/timestamp.proto";

message OAuthToken {
  // The OAuth token.
  string access_token = 1;

  // The type of the token.
  // e.g. "Bearer"
  string token_type = 2;

  string refresh_token = 3;

  // The expiration time of the token in seconds since epoch.
  int64 expires_at = 4;

  // Expiration time
  google.protobuf.Timestamp expiry = 5;

  int64 expires_in = 6; // The number of seconds until the token expires.
}
